# TCU-Code-2025

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/VortexCameras/: CameraManager.py  OAKVidgearClient.py  __init__.py  __main__.py
src/VortexCompanionController/: VortexCompanionController.py  __init__.py
src/VortexController/: ControllerAdapter.py  JoystickHandler.py  VortexController.py  __init__.py  __main__.py
src/VortexFloat/: VortexFloat.py  __init__.py
src/VortexInterfaces/: CameraManagerInterfaces.py  CompanionControllerInterface.py  ControllerInterfaces.py  OAKVidgearClientInterfaces.py  VortexPilotingInterfaces.py  __init__.py
src/VortexPilot/: PilotAdapter.py  ROVController.py  VortexPilot.py  __init__.py
src/VortexStation/: PyqtCompanionController.py  PyqtCompanionControllerEvents.py  PyqtController.py  PyqtControllerEvents.py  PyqtOAKVidgearClient.py  PyqtOAKVidgearClientEvents.py  PyqtRTSPCamera1.py  PyqtRTSPCamera1Events.py  PyqtRTSPCamera2.py  PyqtRTSPCamera2Events.py  PyqtRTSPCamera3.py  PyqtRTSPCamera3Events.py  PyqtRTSPCamera4.py  PyqtRTSPCamera4Events.py  PyqtRTSPCamera5.py  PyqtRTSPCamera5Events.py  PyqtRTSPCamera6.py  PyqtRTSPCamera6Events.py  PyqtRTSPCamera7.py  PyqtRTSPCamera7Events.py  PyqtRTSPCamera8.py  PyqtRTSPCamera8Events.py  UI_MainWindow.py  VortexPilotProxy.py  VortexStation.py  VortexStationUtils.py  VortexWidgetNamesEnums.py  __init__.py  form.ui  rc_resources.py  resources.qrc  resources_rc.py
src/communication/: README.md  __init__.py  link.py  messages.py
src/vortex_ui.egg-info/: PKG-INFO  SOURCES.txt  (+3 more)
(+5 files in other folders)
